--- a/rescuecopter-html/war/index.html
+++ b/rescuecopter-html/war/index.html
@@ -12,8 +12,8 @@
 	</head>
 	
 	<body>
-		<div align="center" id="embed-com.siondrean.rescue.GwtDefinition"></div>
-		<script type="text/javascript" src="com.siondrean.rescue.GwtDefinition/com.siondrean.rescue.GwtDefinition.nocache.js"></script>
+		<div align="center" id="embed-com.siondream.rescue.GwtDefinition"></div>
+		<script type="text/javascript" src="com.siondream.rescue.GwtDefinition/com.siondream.rescue.GwtDefinition.nocache.js"></script>
 	</body>
 	
 	<script>
@@ -29,7 +29,7 @@
 		  evt.target.style.cursor = '';
 		}
 		
-		document.getElementById('embed-com.siondrean.rescue.GwtDefinition').addEventListener('mousedown', handleMouseDown, false);
-		document.getElementById('embed-com.siondrean.rescue.GwtDefinition').addEventListener('mouseup', handleMouseUp, false);
+		document.getElementById('embed-com.siondream.rescue.GwtDefinition').addEventListener('mousedown', handleMouseDown, false);
+		document.getElementById('embed-com.siondream.rescue.GwtDefinition').addEventListener('mouseup', handleMouseUp, false);
 	</script>
 </html>
